arreglo de proyectos y carusel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,6 +574,10 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 0;
 }
 
+.margins {
+  padding: 0 100px;
+}
+
 /* Portfolio Section
 --------------------------------*/
 #portfolio {
