--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -684,62 +684,29 @@ body.mobile-nav-active #mobile-nav-toggle {
   float: left;
 }
 
+@media (max-width: 768px) {
+  #contact .info i {
+    font-size: 22px;
+    color: #03C4EB;
+    float: left;
+  }
+
+}
+
 #contact .info p {
   padding: 0 0 10px 50px;
   line-height: 24px;
 }
 
+@media (max-width: 768px) {
+  #contact .info p {
+    padding: 0 0 10px 25px;
+  }
+
+}
+
 #contact .info p a {
   color: #333333;
-}
-
-#contact .form #sendmessage {
-  color: #03C4EB;
-  border: 1px solid #03C4EB;
-  display: none;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-  margin-bottom: 15px;
-}
-
-#contact .form #errormessage {
-  color: red;
-  display: none;
-  border: 1px solid red;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-  margin-bottom: 15px;
-}
-
-#contact .form #sendmessage.show, #contact .form #errormessage.show, #contact .form .show {
-  display: block;
-}
-
-#contact .form .validation {
-  color: red;
-  display: none;
-  margin: 0 0 20px;
-  font-weight: 400;
-  font-size: 13px;
-}
-
-#contact .form input, #contact .form textarea {
-  border-radius: 0;
-  box-shadow: none;
-}
-
-#contact .form button[type="submit"] {
-  background: #03C4EB;
-  border: 0;
-  padding: 10px 24px;
-  color: #fff;
-  transition: 0.4s;
-}
-
-#contact .form button[type="submit"]:hover {
-  background: #25d8fc;
 }
 
 /*--------------------------------------------------------------
